# katex-notepad

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci-webview.yml  ci.yml
public/: index.html  manifest.json
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: decoders.rs  main.rs
src/components/: ActionPanel.tsx  Button.tsx  Editor.tsx  EditorRender.tsx  EditorToolbar.tsx  FilenameInput.tsx  FilenamePanel.tsx  Hint.tsx  InlineTex.tsx  KatexTextarea.tsx  Kbd.tsx  Navbar.tsx  NumberInput.tsx  Toggle.tsx  TogglePanel.tsx
src/services/: config.ts  dialog.ts  file.ts  render.test.ts  render.ts  util.test.ts  util.ts  window.ts
src/services/api/: config.ts  dialog.ts  file.ts  handlers.ts
src/services/util/: file.test.ts  file.ts  parser.test.ts  render.test.ts  render.ts
src/store/: config.ts  hooks.ts  types.ts
src/store/slice/: editor.ts  hint.ts  render.ts  toolbar.ts
