[package]
name = "katex-notepad"
version = "0.1.0"
description = "A simple desktop application for editing and saving complex math expressions and scripts."
authors = ["Anton Kozyriev"]
license = "MIT License"
repository = "https://github.com/antonAce/katex-notepad"
default-run = "katex-notepad"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.12", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
